[gd_scene load_steps=4 format=3 uid="uid://c2h2cu12psype"]

[ext_resource type="Script" path="res://UI_Menus/Pause_Menu/pause_menu.gd" id="1_1fr4s"]
[ext_resource type="Theme" uid="uid://bkmxab2a5cohh" path="res://game_theme.tres" id="2_dvlpp"]
[ext_resource type="AudioStream" uid="uid://dsju0uv4wpeo7" path="res://pong_assets/Click_SFX.ogg" id="3_fhvhw"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1fr4s")

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00784314, 0.0352941, 0, 0.427451)

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -131.0
offset_right = 288.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dvlpp")

[node name="Label" type="Label" parent="BackGround/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 71
text = "Pause"
horizontal_alignment = 1

[node name="Resume_Button" type="Button" parent="BackGround/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_dvlpp")
text = "Resume Game"

[node name="Quit_Button" type="Button" parent="BackGround/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_dvlpp")
text = "Quit to Main Menu"

[node name="button_SFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_fhvhw")
volume_db = 3.014
pitch_scale = 1.14

[connection signal="button_down" from="BackGround/VBoxContainer/Resume_Button" to="." method="_on_resume_button_button_down"]
[connection signal="pressed" from="BackGround/VBoxContainer/Resume_Button" to="." method="_on_resume_button_pressed"]
[connection signal="button_down" from="BackGround/VBoxContainer/Quit_Button" to="." method="_on_quit_button_button_down"]
[connection signal="pressed" from="BackGround/VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
